# vpnfybot-windows

./: .gitignore  LICENSE  README.en.md  README.md  README.ru.md
WinDivert-2.2.2-A/: LICENSE  README
proxybridge-master/: LICENSE  README.md
proxybridge-master/Windows/: README.md  compile.ps1  compile_local.ps1  compile_simple.cmd  compile_with_windivert.cmd
proxybridge-master/Windows/ProxyBridgeCoreManaged/: ProxyBridgeCore.cs  ProxyBridgeCoreManaged.csproj
proxybridge-master/Windows/StubProxyBridgeCore/: ProxyBridgeCore.cs  StubProxyBridgeCore.csproj
proxybridge-master/Windows/cli/: ProxyBridge.CLI.csproj  ProxyBridgeNative.cs
proxybridge-master/Windows/gui/: App.axaml  Program.cs
proxybridge-master/Windows/gui/Common/: RelayCommand.cs
proxybridge-master/Windows/gui/Interop/: ProxyBridgeNative.cs
proxybridge-master/Windows/gui/Resources/: Resources.zh.resx
proxybridge-master/Windows/gui/Services/: SettingsService.cs
proxybridge-master/Windows/gui/Styles/: SharedStyles.axaml
proxybridge-master/Windows/gui/ViewModels/: AboutViewModel.cs  MainWindowViewModel.cs  ProxyRulesViewModel.cs  ProxySettingsViewModel.cs  UpdateCheckViewModel.cs  ViewModelBase.cs
proxybridge-master/Windows/gui/Views/: AboutWindow.axaml  AboutWindow.axaml.cs  MainWindow.axaml.cs  ProxyRulesWindow.axaml  ProxySettingsWindow.axaml  ProxySettingsWindow.axaml.cs  UpdateCheckWindow.axaml  UpdateNotificationWindow.axaml  UpdateNotificationWindow.axaml.cs
proxybridge-master/Windows/src/: MinimalProxyBridge.c  ProxyBridge.c  ProxyBridge.h  ProxyBridgeStub.c  SimpleProxyBridge.c
src/: Cargo.toml  SimpleProxyBridgeCore.cs  app.manifest  app.rc  build-exe-release.bat  build-exe.bat  build-installer-release.bat  build.rs  copy_deps.ps1
src/installer/: vpnfybot-windows.nsi
src/src/: app_dirs.rs  embedded_deps_bytes.rs  gui_rfd.rs  update_check.rs  vpnfybot_windows.rs
src/src/gui_rfd/: app_runtime.rs  app_storage.rs  app_view.rs  app_windows.rs  error_dialog.rs  process_editor.rs  site_editor.rs  tunnel_service.rs  ui_helpers.rs
wireproxy-master/: Dockerfile  LICENSE  README.md  go.mod
wireproxy-master/.github/workflows/: build.yml  golangci-lint.yml  test.yml
