[package]
name = "wg-gui"
version = "4.0.8"
edition = "2021"
build = "build.rs"
default-run = "vpnfybot-windows"

[[bin]]
name = "vpnfybot-windows"
path = "src/vpnfybot_windows.rs"

[dependencies]
rfd = "0.14"
eframe = { version = "0.27", default-features = false, features = ["glow"] }
egui = "0.27"
image = { version = "0.24", default-features = false, features = ["gif", "png"] }
anyhow = "1.0"
raw-window-handle = "0.6"
windows = { version = "0.48", features = ["Data_Xml_Dom", "UI_Notifications", "Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_Storage_EnhancedStorage", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Security"] }
sysinfo = "0.32"
libloading = "0.8"
log = "0.4"
resvg = "0.47"
ureq = "2.7"
serde_json = "1.0"
semver = "1.0"
zstd = "0.13"

[build-dependencies]
embed-resource = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }
zstd = "0.13"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
